[package]
name = "chainstate-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chainstate-test-framework = { path = '../chainstate-test-framework' }
chainstate = { path = '../chainstate' }
chainstate-types = { path = '../chainstate-types' }
common = { path = '../common' }
test-utils = {path = '../test-utils'}
crypto = { path = '../crypto' }
serialization = {path = "../serialization"}
utils = { path = '../utils' }
consensus = {path = "../consensus"}
logging = { path = '../logging' }

rstest = "0.15"
hex = "0.4"
itertools = "0.10"
