[package]
name = "chainstate-types"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialization = { path = "../serialization" }
logging = { path = "../logging/" }
common = { path = "../common/" }
crypto = { path = '../crypto'}

parity-scale-codec = "3.1"
