[package]
name = "chainstate"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
accounting = { path = "../accounting" }
chainstate-storage = { path = "./storage", features = ["lmdb", "mock"] }
chainstate-types = { path = "./types" }
common = { path = "../common" }
consensus = { path = "../consensus" }
constraints-value-accumulator = { path = "./constraints-value-accumulator" }
crypto = { path = "../crypto" }
logging = { path = "../logging" }
mintscript = { path = "../mintscript" }
orders-accounting = { path = "../orders-accounting" }
pos-accounting = { path = "../pos-accounting" }
randomness = { path = "../randomness" }
rpc = { path = "../rpc" }
rpc-description = { path = "../rpc/description" }
serialization = { path = "../serialization" }
subsystem = { path = "../subsystem" }
tx-verifier = { path = "./tx-verifier" }
tokens-accounting = { path = "../tokens-accounting" }
utils = { path = "../utils" }
utils-networking = { path = "../utils/networking" }
utxo = { path = "../utxo" }

async-trait.workspace = true
derive_more.workspace = true
hex.workspace = true
itertools.workspace = true
jsonrpsee = { workspace = true, features = ["macros"] }
mockall.workspace = true
num.workspace = true
oneshot.workspace = true
parity-scale-codec.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
static_assertions.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
test-utils = { path = "../test-utils" }
storage = { path = "../storage" }

rstest.workspace = true
