[package]
name = "common"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
script = { path = '../script'}
crypto = { path = '../crypto'}
serialization = { path = "../serialization" }
logging = { path = "../logging/" }
utils = {path = '../utils'}
typename = { path = "../utils/typename" }

anyhow = "1.0"
bech32 = "0.9"
generic-array = "0.14"
parity-scale-codec.workspace = true
serde = "1.0"
static_assertions.workspace = true
thiserror.workspace = true
hex.workspace = true

# for fixed_hash
arbitrary = "1.1"
byteorder = "1.4"
rustc-hex = "2.1"

[dev-dependencies]
bitcoin-bech32 = "0.12"
expect-test = "1.3"
proptest = "1.0"
serde_test = "1.0"
serde_json = "1.0"
itertools.workspace = true
serial_test = "0.9"
rstest = "0.16"
test-utils = {path = '../test-utils'}
