[package]
name = "common"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = '../crypto'}
merkletree = { path = "../merkletree", features = ["scale-codec"] }
serialization = { path = "../serialization" }
logging = { path = "../logging/" }
script = { path = '../script'}
utils = {path = '../utils'}
typename = { path = "../utils/typename" }

anyhow = "1.0"
bech32 = "0.9"

generic-array.workspace = true
hex.workspace = true
itertools.workspace = true
parity-scale-codec.workspace = true
once_cell.workspace = true
serde = { workspace = true, features = ["derive"] }
static_assertions.workspace = true
thiserror.workspace = true

# for fixed_hash
arbitrary = "1.1"
byteorder = "1.4"
rustc-hex = "2.1"

[dev-dependencies]
rstest.workspace = true
bitcoin-bech32 = "0.12"
expect-test = "1.3"
proptest = "1.0"
serde_test = "1.0"
serde_json = "1.0"
serial_test = "1.0"
test-utils = {path = '../test-utils'}
