[package]
name = "consensus"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chainstate-types = { path = '../chainstate/types' }
common = { path = '../common' }
crypto = { path = '../crypto' }
logging = { path = "../logging" }
pos_accounting = { path = '../pos_accounting' }
serialization = { path = "../serialization" }
utils = { path = "../utils" }
utxo = { path = '../utxo' }

itertools.workspace = true
num.workspace = true
parity-scale-codec.workspace = true
thiserror.workspace = true

[dev-dependencies]
test-utils = {path = '../test-utils'}

rstest.workspace = true
