[package]
name = "crypto"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Samer Afach <samer.afach@mintlayer.org>", "Ben Marsh <benjamin.marsh@mintlayer.org>", "Enrico Rubboli <enrico.rubboli@mintlayer.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rpc-description = { path = "../rpc/description" }
randomness = { path = "../randomness" }
serialization = { path = "../serialization" }

argon2 = { workspace = true, features = ["std"] }
bip39 = { workspace = true, default-features = false, features = ["std", "zeroize"] }
blake2.workspace = true
chacha20poly1305.workspace = true
generic-array.workspace = true
hmac.workspace = true
merlin = { workspace = true, default-features = false }
num-derive.workspace = true
num-traits.workspace = true
num.workspace = true
parity-scale-codec.workspace = true
ripemd.workspace = true
schnorrkel.workspace = true
secp256k1 = { workspace = true, default-features = false, features = ["rand-std", "std", "rand"] }
serde = { workspace = true, features = ["derive"] }
sha-1.workspace = true
sha2.workspace = true
sha3.workspace = true
thiserror.workspace = true
x25519-dalek = { workspace = true, features = ["reusable_secrets", "zeroize"] }
zeroize.workspace = true

[dev-dependencies]
test-utils = { path = "../test-utils" }

hex.workspace = true
rand_chacha.workspace = true
rstest.workspace = true
