[package]
name = "crypto"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]

rpc-description = { path = "../rpc/description" }
randomness = { path = "../randomness" }
serialization = { path = "../serialization" }

argon2 = { workspace = true, features = ["std"] }
bip39 = { workspace = true, default-features = false, features = ["std", "zeroize"] }
blake2.workspace = true
chacha20poly1305.workspace = true
generic-array.workspace = true
hmac.workspace = true
lazy_static.workspace = true
merlin = { workspace = true, default-features = false }
num-derive.workspace = true
num-traits.workspace = true
num.workspace = true
parity-scale-codec = { workspace = true, features = ["std"] }
rand_0_8.workspace = true
ripemd.workspace = true
schnorrkel.workspace = true
secp256k1 = { workspace = true, default-features = false, features = ["std", "rand"] }
serde = { workspace = true, features = ["derive"] }
sha-1.workspace = true
sha2.workspace = true
sha3.workspace = true
strum.workspace = true
thiserror.workspace = true
x25519-dalek = { workspace = true, features = ["reusable_secrets", "zeroize"] }
zeroize.workspace = true

[dev-dependencies]
test-utils = { path = "../test-utils" }

hex.workspace = true
rand_chacha.workspace = true
rstest.workspace = true
