[package]
name = "dns-server"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Samer Afach <samer.afach@mintlayer.org>", "Ben Marsh <benjamin.marsh@mintlayer.org>", "Enrico Rubboli <enrico.rubboli@mintlayer.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chainstate = { path = "../chainstate" }
common = { path = "../common" }
crypto = { path = "../crypto" }
logging = { path = "../logging" }
p2p = { path = "../p2p" }
serialization = { path = "../serialization" }
storage = { path = "../storage" }
storage-lmdb = { path = "../storage/lmdb" }
utils = { path = '../utils' }
utils-tokio = { path = "../utils/tokio" }

async-trait.workspace = true
clap = { workspace = true, features = ["derive"] }
directories.workspace = true
futures = { workspace = true }
itertools.workspace = true
parity-scale-codec.workspace = true
thiserror.workspace = true
tokio = { workspace = true, default-features = false }
trust-dns-client.workspace = true
trust-dns-server.workspace = true

[dev-dependencies]
p2p-test-utils = { path = "../p2p/p2p-test-utils" }
test-utils = { path = "../test-utils" }

rstest.workspace = true
