[package]
name = "dns_server"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "../crypto" }
p2p = { path = "../p2p" }
common = { path = "../common" }
storage = { path = "../storage" }
storage-lmdb = { path = "../storage/lmdb" }
serialization = { path = "../serialization" }
logging = { path = "../logging" }
utils = { path = '../utils' }

tokio = { workspace = true, default-features = false }
trust-dns-client = "0.22.0"
trust-dns-server = "0.22.0"
thiserror.workspace = true
async-trait.workspace = true
parity-scale-codec.workspace = true
void = "1.0"
clap = { version = "4", features = ["derive"] }
directories = "4.0"

[dev-dependencies]
test-utils = { path = "../test-utils" }

rstest = "0.16"
