[package]
name = "logging"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console-subscriber = { workspace = true, optional = true }
log.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
tokio-console = ["dep:console-subscriber"]
