[package]
name = "logging"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
console-subscriber = { workspace = true, optional = true }
log.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
tokio-console = ["dep:console-subscriber"]
