[package]
name = "logging"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
console-subscriber = { workspace = true, optional = true }
log.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serial_test.workspace = true

test-utils = { path = "../test-utils" }

[features]
tokio-console = ["dep:console-subscriber"]
