[package]
name = "mempool"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
accounting = { path = '../accounting' }
chainstate = { path = '../chainstate' }
chainstate-types = { path = '../chainstate/types' }
common = { path = '../common' }
logging = { path = '../logging' }
pos_accounting = { path = '../pos_accounting' }
rpc = { path = '../rpc' }
serialization = { path = '../serialization' }
subsystem = { path = '../subsystem' }
utils = { path = '../utils' }
utxo = { path = '../utxo' }

anyhow.workspace = true
async-trait.workspace = true
hex.workspace = true
jsonrpsee = { workspace = true, features = ["macros"] }
mockall.workspace = true
parking_lot.workspace = true
thiserror.workspace = true
tokio = { workspace = true, default-features = false, features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
chainstate-storage = { path = '../chainstate/storage' }
chainstate-test-framework = { path = '../chainstate/test-framework' }
crypto = { path = '../crypto' }
test-utils = {path = '../test-utils'}

rstest.workspace = true
