[package]
name = "merkletree"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
thiserror.workspace = true

fixed-hash = "0.8"
blake2 = "0.10"

[dev-dependencies]
test-utils = {path = '../test-utils'}

rstest.workspace = true
rand = "0.8"
