[package]
name = "merkletree"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
scale-codec = ["dep:parity-scale-codec"]

[dependencies]
itertools = "0.10"
thiserror = "1.0"
parity-scale-codec = { version = "3.1", optional = true }

[dev-dependencies]
blake2 = "0.10"
fixed-hash = "0.8"
rstest = "0.17"
rand = "0.8"
rand_chacha = "0.3"
