[package]
name = "merkletree"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
scale-codec = ["dep:parity-scale-codec"]

[dependencies]
itertools.workspace = true
parity-scale-codec = { workspace = true, optional = true }
thiserror.workspace = true

[dev-dependencies]
blake2.workspace = true
fixed-hash.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rstest.workspace = true
