[package]
name = "mintscript"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
utils = { path = "../utils" }

thiserror.workspace = true
