[package]
name = "mintscript"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
crypto = { path = "../crypto" }
logging = { path = "../logging" }
orders-accounting = { path = "../orders-accounting" }
pos-accounting = { path = "../pos-accounting" }
serialization = { path = "../serialization" }
tokens-accounting = { path = "../tokens-accounting" }
utils = { path = "../utils" }
utxo = { path = "../utxo" }

ctor.workspace = true
derive_more.workspace = true
static_assertions.workspace = true
strum.workspace = true
thiserror.workspace = true

[dev-dependencies]

crypto = { path = '../crypto' }
test-utils = { path = '../test-utils' }
serialization = { path = '../serialization' }

hex.workspace = true
rstest.workspace = true
expect-test.workspace = true
