[package]
name = "node-daemon"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Samer Afach <samer.afach@mintlayer.org>", "Ben Marsh <benjamin.marsh@mintlayer.org>", "Enrico Rubboli <enrico.rubboli@mintlayer.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logging = { path = "../logging" }
node-lib = { path = "../node-lib/" }
utils = { path = "../utils" }

anyhow.workspace = true
tokio = { workspace = true, default-features = false }

[dev-dependencies]

rpc-description = { path = "../rpc/description" }

assert_cmd.workspace = true
expect-test.workspace = true
