[package]
name = "node-daemon"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
logging = { path = "../logging" }
node-lib = { path = "../node-lib/" }
utils = { path = "../utils" }

anyhow.workspace = true
tokio = { workspace = true, default-features = false }

[dev-dependencies]

rpc-description = { path = "../rpc/description" }

assert_cmd.workspace = true
expect-test.workspace = true

[features]
tokio-console = ["utils/tokio-console"]
