[package]
name = "node-gui"
description = "Mintlayer Node GUI"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Samer Afach <samer.afach@mintlayer.org>", "Ben Marsh <benjamin.marsh@mintlayer.org>", "Enrico Rubboli <enrico.rubboli@mintlayer.org>"]

[package.metadata.wix]
upgrade-guid = "EE04F2A1-4683-4D66-8770-438889AC3FD7"
path-guid = "6AEFEEB1-61AB-407A-8D84-AAF263A1F2F8"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chainstate = { path = "../chainstate" }
common = { path = "../common" }
crypto = { path = "../crypto" }
logging = { path = "../logging" }
mempool = { path = "../mempool" }
node-lib = { path = "../node-lib" }
node-comm = { path = "../wallet/wallet-node-client" }
p2p = { path = "../p2p" }
serialization = { path = "../serialization" }
subsystem = { path = "../subsystem" }
utils = { path = "../utils" }
wallet = { path = "../wallet" }
wallet-controller = { path = "../wallet/wallet-controller" }
wallet-types = { path = "../wallet/types" }
wallet-rpc-lib = { path = "../wallet/wallet-rpc-lib"}
wallet-rpc-client = { path = "../wallet/wallet-rpc-client"}
wallet-cli-commands = { path = "../wallet/wallet-cli-commands"}

anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
iced = { workspace = true, features = ["canvas", "debug", "tokio", "lazy"] }
iced_aw = { workspace = true, features = ["cupertino", "icons"] }
rfd = { workspace = true, features = ["xdg-portal", "tokio"] }
thiserror.workspace = true
tokio.workspace = true
variant_count.workspace = true
