[package]
name = "node-gui"
description = "Mintlayer Node GUI"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Samer Afach <samer.afach@mintlayer.org>", "Ben Marsh <benjamin.marsh@mintlayer.org>", "Enrico Rubboli <enrico.rubboli@mintlayer.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chainstate = { path = "../chainstate" }
common = { path = "../common" }
logging = { path = "../logging" }
node-gui-backend = { path = "./backend" }
node-lib = { path = "../node-lib" }
node-comm = { path = "../wallet/wallet-node-client" }
p2p = { path = "../p2p" }
storage = { path = "../storage" }
serialization = { path = "../serialization" }
utils = { path = "../utils" }
wallet = { path = "../wallet" }
wallet-controller = { path = "../wallet/wallet-controller" }
wallet-types = { path = "../wallet/types" }
wallet-cli-commands = { path = "../wallet/wallet-cli-commands"}
wallet-storage = { path = "../wallet/storage" }

anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
heck.workspace = true
iced = { workspace = true, features = ["canvas", "debug", "tokio", "lazy"] }
iced_aw = { workspace = true }
iced_fonts = { workspace = true, features = ["bootstrap"] }
rfd = { workspace = true, features = ["xdg-portal", "tokio"] }
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
trezor = ["wallet-controller/trezor", "wallet-types/trezor", "wallet-cli-commands/trezor", "node-gui-backend/trezor"]
default = ["trezor"]
