[package]
name = "node-gui"
description = "Mintlayer Node GUI"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
chainstate = { path = "../chainstate" }
common = { path = "../common" }
logging = { path = "../logging" }
node-comm = { path = "../wallet/wallet-node-client", default-features = false }
node-gui-backend = { path = "./backend", default-features = false }
node-lib = { path = "../node-lib" }
p2p = { path = "../p2p" }
storage = { path = "../storage" }
serialization = { path = "../serialization" }
utils = { path = "../utils" }
wallet = { path = "../wallet", default-features = false }
wallet-cli-commands = { path = "../wallet/wallet-cli-commands", default-features = false }
wallet-controller = { path = "../wallet/wallet-controller", default-features = false }
wallet-types = { path = "../wallet/types", default-features = false }
wallet-storage = { path = "../wallet/storage", default-features = false }

anyhow.workspace = true
chrono.workspace = true
futures.workspace = true
heck.workspace = true
iced = { workspace = true, features = ["canvas", "debug", "tokio", "lazy"] }
iced_aw = { workspace = true }
iced_fonts = { workspace = true, features = ["bootstrap"] }
rfd = { workspace = true, features = ["xdg-portal", "tokio"] }
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[features]
tokio-console = ["utils/tokio-console"]
trezor = [
  "node-comm/trezor",
  "node-gui-backend/trezor",
  "wallet/trezor",
  "wallet-cli-commands/trezor",
  "wallet-controller/trezor",
  "wallet-types/trezor",
  "wallet-storage/trezor",
]
ledger = [
  "node-comm/ledger",
  "node-gui-backend/ledger",
  "wallet/ledger",
  "wallet-cli-commands/ledger",
  "wallet-controller/ledger",
  "wallet-types/ledger",
  "wallet-storage/ledger",
]
default = ["trezor", "ledger"]
