[package]
name = "node-lib"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockprod = { path = "../blockprod" }
chainstate = { path = "../chainstate" }
chainstate-launcher = { path = "../chainstate/launcher" }
common = { path = "../common" }
logging = { path = "../logging" }
mempool = { path = "../mempool" }
p2p = { path = "../p2p" }
rpc = { path = "../rpc" }
storage-lmdb = { path = "../storage/lmdb" }
subsystem = { path = "../subsystem" }
test-rpc-functions = { path = "../test-rpc-functions" }
utils = { path = "../utils" }
utils-tokio = { path = "../utils/tokio" }

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
jsonrpsee = { workspace = true, features = ["macros"] }
tokio = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
toml.workspace = true
directories.workspace = true
paste.workspace = true
fs4.workspace = true

[dev-dependencies]
crypto = { path = "../crypto" }

tempfile.workspace = true
