[package]
name = "node-lib"
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
blockprod = { path = "../blockprod" }
chainstate = { path = "../chainstate" }
chainstate-launcher = { path = "../chainstate/launcher" }
common = { path = "../common" }
logging = { path = "../logging" }
mempool = { path = "../mempool" }
p2p = { path = "../p2p" }
rpc = { path = "../rpc" }
storage-lmdb = { path = "../storage/lmdb" }
subsystem = { path = "../subsystem" }
test-rpc-functions = { path = "../test-rpc-functions" }
utils = { path = "../utils" }
utils-networking = { path = "../utils/networking" }

anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
csv.workspace = true
directories.workspace = true
file-rotate.workspace = true
fs4.workspace = true
jsonrpsee = { workspace = true, features = ["macros"] }
paste.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_with.workspace = true
thiserror.workspace = true
tokio = { workspace = true, default-features = false }
toml.workspace = true

[dev-dependencies]
crypto = { path = "../crypto" }
randomness = { path = "../randomness" }

ctor.workspace = true
rstest.workspace = true
tempfile.workspace = true

[build-dependencies]
build_utils = { path = "../utils/build_utils" }
