[package]
name = "node"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Local dependencies
chainstate-storage = { path = "../chainstate/storage/" }
common = { path = "../common/" }
chainstate = { path = "../chainstate/" }
logging = { path = "../logging/" }
mempool = { path = "../mempool/" }
p2p = { path = "../p2p/" }
rpc = { path = "../rpc/" }
subsystem = { path = "../subsystem/" }

# External dependencies
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
jsonrpsee = { version = "0.15", features = ["macros"] }
tokio = { version = "1.19", default-features = false }
serde = { version = "1", features = ["derive"] }
toml = "0.5"
directories = "4.0"
paste = "1.0"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3.3"
